--- a/ReadMe
+++ b/ReadMe
@@ -1,11 +1,28 @@
+MedConsultant — RAG-проект медицинского консультанта
+
+MedConsultant — это поисково-генеративный ассистент для аптекарей и фармацевтов.
+Он позволяет вводить запрос на естественном языке и получать развернутый фактологический ответ, основанный на релевантных медицинских и справочных статьях.
+
+Как работает:
+
+- Пользователь вводит запрос (например:
+«что используют чтобы получить ароматизатор клюквы, идентичный натуральному»).
+
+- Система находит топ-5 релевантных статей с помощью векторного поиска (SentenceTransformers + cosine similarity).
+
+- С помощью модели extractive QA (DistilBERT) выделяется наиболее подходящий фрагмент текста.
+
+- На основе выделенного контекста LLM (TinyLlama) формирует финальный связный ответ.
+
+
 Пример запроса:
 что используют чтобы получить ароматизатор клюквы, идентичный натуральному
 
-Запуск проекта:
-
+Парсинг заголовков документов и последующий перевод в векторы (запустить один раз):
 python3 parse_articles.py
-uvicorn app:app --reload
 
+Запуск проекта:
+uvicorn app:app --reload
 
 Доступен по:
 http://localhost:8000/static/index.html
