Fix formatting in ReadMe
Corrected formatting in ReadMe file.

--- a/ReadMe
+++ b/ReadMe
@@ -1,6 +1,6 @@
 MedConsultant — RAG-проект медицинского консультанта
 
-MedConsultant — это поисково-генеративный(RAG) ассистент для аптекарей и фармацевтов.
+MedConsultant — это поисково-генеративный ассистент для аптекарей и фармацевтов.
 Он позволяет вводить запрос на естественном языке и получать развернутый фактологический ответ, основанный на релевантных медицинских и справочных статьях.
 
 Как работает:
